--- a/src/app/nv-them/nv-them.component.html
+++ b/src/app/nv-them/nv-them.component.html
@@ -1,1 +1,56 @@
-<p>nv-them works!</p>
+<div class="container">
+  <form #create="ngForm" (ngSubmit)="onCreate(create.value)">
+    <div>
+      <label for="" class="form-label">Ho</label>
+      <input type="text" class="form-control" name="Ho" ngModel />
+    </div>
+    <div>
+      <label for="" class="form-label">Ten</label>
+      <input type="text" class="form-control" name="Ten" ngModel />
+    </div>
+    <div>
+      <label for="" class="form-label">NgaySinh</label>
+      <input
+        id="projectStartDate"
+        type="date"
+        class="form-control"
+        name="NgaySinh"
+        ngModel
+      />
+    </div>
+    <div class="form-group">
+      <label for="" class="form-label">GioiTinh</label><br />
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          id="gioiTinhNam"
+          ngModel
+          name="GioiTinh"
+          value="Nam"
+          required
+        />
+        <label class="form-check-label" for="gioiTinhNam">Nam</label>
+      </div>
+      <div class="form-group">
+        <label for="" class="form-label">GioiTinh</label><br />
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            id="gioiTinhNam"
+            ngModel
+            name="GioiTinh"
+            value="Nu"
+            required
+          />
+          <label class="form-check-label" for="gioiTinhNam">Nu</label>
+        </div>
+      </div>
+
+      <label for="" class="form-label">KhuVuc</label>
+      <input type="text" class="form-control" name="KhuVuc" ngModel />
+    </div>
+    <button type="submit" class="btn btn-primary">Them Moi</button>
+  </form>
+</div>
