--- a/src/app/duanlisk/duanlisk.component.html
+++ b/src/app/duanlisk/duanlisk.component.html
@@ -9,7 +9,7 @@
       <th>Ten du an</th>
       <th>Ngay start</th>
       <th>Tien</th>
-      <th>Actions</th>
+      <th>ChucNang</th>
     </tr>
   </thead>
   <tbody>
