--- a/src/app/nv-list/nv-list.component.html
+++ b/src/app/nv-list/nv-list.component.html
@@ -13,20 +13,20 @@
   <tr *ngFor="let nv of list_nhan_vien">
     <td class="p-2 px-2">{{ nv.id }}</td>
     <td>{{ nv.Ho }} {{ nv.Ten }}</td>
-    <td>{{ nv.NgaySinh | date : "dd/mm/yyyy" }}</td>
-    <td>{{ nv.GioiTinh == true ? "Nam" : "Nu" }}</td>
+    <td>{{ nv.NgaySinh }}</td>
+    <td>{{ nv.GioiTinh }}</td>
     <td class="text-end p-1 px-2">
       {{ nv.KhuVuc }}
     </td>
     <button (click)="editNvien(nv)" class="btn btn-warning">Sửa</button>
-    <button (click)="deleteProject(nv.id)" class="btn btn-danger">Xóa</button>
+    <button (click)="deleteNhanVien(nv.id)" class="btn btn-danger">Xóa</button>
   </tr>
 </table>
 
 <!-- Edit Project Form -->
 <div *ngIf="editingProject" class="edit-form">
   <h3>Chỉnh sửa dự án</h3>
-  <form (ngSubmit)="updateProject()">
+  <form (ngSubmit)="updateNhanVien()">
     <div class="form-group">
       <label for="projectName">Ho:</label>
       <input
