--- a/src/app/nv-them/nv-them.component.html
+++ b/src/app/nv-them/nv-them.component.html
@@ -33,18 +33,17 @@
         <label class="form-check-label" for="gioiTinhNam">Nam</label>
       </div>
       <div class="form-group">
-        <label for="" class="form-label">GioiTinh</label><br />
         <div class="form-check form-check-inline">
           <input
             class="form-check-input"
             type="radio"
-            id="gioiTinhNam"
+            id="gioiTinhNu"
             ngModel
             name="GioiTinh"
             value="Nu"
             required
           />
-          <label class="form-check-label" for="gioiTinhNam">Nu</label>
+          <label class="form-check-label" for="gioiTinhNu">Nu</label>
         </div>
       </div>
 
