--- a/src/app/task-lisk/task-lisk.component.html
+++ b/src/app/task-lisk/task-lisk.component.html
@@ -15,15 +15,15 @@
     </div>
   </div>
   <div class="d-flex justify-content-end mt-2">
-    <button (click)="editNvien(task)" class="btn btn-warning me-2">Sửa</button>
-    <button (click)="deleteProject(task.id)" class="btn btn-danger">Xóa</button>
+    <button (click)="editTask(task)" class="btn btn-warning me-2">Sửa</button>
+    <button (click)="deletetask(task.id)" class="btn btn-danger">Xóa</button>
   </div>
 </div>
 
 <!-- Edit Project Form -->
 <div *ngIf="editTasks" class="edit-form">
-  <h3>Chỉnh sửa dự án</h3>
-  <form (ngSubmit)="updateProject()">
+  <h3>Chỉnh sửa Task</h3>
+  <form (ngSubmit)="(updateTask)">
     <div class="form-group">
       <label for="projectName">Tentask:</label>
       <input
